# terminal-midi-monitor

./: .gitignore  Cargo.toml  README.md
src/: main.rs
